// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders size=lg 1`] = `
<svg
  aria-hidden="true"
  class="animate-spin text-current w-8 h-8"
  fill="none"
  viewBox="0 0 24 24"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"
    fill="currentColor"
  />
</svg>
`;

exports[`Spinner renders size=md 1`] = `
<svg
  aria-hidden="true"
  class="animate-spin text-current w-6 h-6"
  fill="none"
  viewBox="0 0 24 24"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"
    fill="currentColor"
  />
</svg>
`;

exports[`Spinner renders size=sm 1`] = `
<svg
  aria-hidden="true"
  class="animate-spin text-current w-4 h-4"
  fill="none"
  viewBox="0 0 24 24"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"
    fill="currentColor"
  />
</svg>
`;
